letzte P changes index.html

--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
 </p>
 
 <p class="anders">
-    The Beatles arrived very early in the morning of 17 August 1960, but had no trouble finding the St. Pauli area of Hamburg, as it was so infamous.[36] Unfortunately the Indra Club (64 Grosse Freiheit)[37] was closed, so a manager from a neighbouring club found someone to open it up, and the group slept on the red leather seats in the alcoves.[38] The group played at the club on the same night, but were told they could sleep in the storeroom of Bambi Kino (a small cinema), which was cold and in very poor condition[30] (33 Paul-Roosen Strasse).
+    The Beatles arrived very early in the morning of 17 August 1960, but had no trouble finding the St. Pauli area of Hamburg, as it was so infamous. Unfortunately the Indra Club (64 Grosse Freiheit) was closed, so a manager from a neighbouring club found someone to open it up, and the group slept on the red leather seats in the alcoves. The group played at the club on the same night, but were told they could sleep in the storeroom of Bambi Kino (a small cinema), which was cold and in very poor condition (33 Paul-Roosen Strasse).
 </p>
 
-<class class="anders">
-McCartney later said, "We lived backstage in the Bambi Kino, next to the toilets, and you could always smell them. The room had been an old storeroom, and there were just concrete walls and nothing else. No heat, no wallpaper, not a lick of paint; and two sets of bunk beds, with not very much covers—Union Jack flags—we were frozen."[39] Lennon remembered: "We were put in this pigsty. We were living in a toilet, like right next to the ladies' toilet. We'd go to bed late and be woken up next day by the sound of the cinema show and old German fraus [women] pissing next door."[30] After having been awoken in this fashion, the group were then obliged to use cold water from the urinals for washing and shaving.[40] They were paid £2.50 each a day, seven days a week, playing from 8:30–9:30, 10 until 11, 11:30–12:30, and finishing the evening playing from one until two o'clock in the morning.[41] German customers found the group's name comical, as "Beatles" sounded like Low German: Piedel, which is an infantile word for penis.
-</class>
+<p class="anders">
+McCartney later said, "We lived backstage in the Bambi Kino, next to the toilets, and you could always smell them. The room had been an old storeroom, and there were just concrete walls and nothing else. No heat, no wallpaper, not a lick of paint; and two sets of bunk beds, with not very much covers—Union Jack flags—we were frozen." Lennon remembered: "We were put in this pigsty. We were living in a toilet, like right next to the ladies' toilet. We'd go to bed late and be woken up next day by the sound of the cinema show and old German fraus [women] pissing next door."After having been awoken in this fashion, the group were then obliged to use cold water from the urinals for washing and shaving.They were paid £2.50 each a day, seven days a week, playing from 8:30–9:30, 10 until 11, 11:30–12:30, and finishing the evening playing from one until two o'clock in the morning. German customers found the group's name comical, as "Beatles" sounded like Low German: Piedel, which is an infantile word for penis.
+</p>
 
 </body>
 </html>
