--- a/index.html
+++ b/index.html
@@ -11,18 +11,18 @@
 <body>
 
     <h1 class="header">The Beatles in Hamburg</h1>
-
-    <p>
+   
+    <p class="div1">
         The original lineup of the <span id="band">Beatles</span>, <span id="name"> John Lennon, Paul McCartney, George Harrison, Stuart Sutcliffe and Pete Best </span> regularly performed at different clubs in <span id="wo">Hamburg</span>, West Germany, during the period from August 1960 to December 1962; a chapter in the group's history which honed their performance skills, widened their reputation, and led to their first recording, which brought them to the attention of Brian Epstein.
     </p>
 
-    <p id="hh">
+    <p class="div1">
         The Beatles' booking agent, Allan Williams, decided to send the group to Hamburg when another group he managed, Derry and the Seniors, proved successful there. Having no permanent drummer at the time, they recruited Best a few days before their departure. After breaking their contract by playing at another club, Harrison was deported for being underaged, and McCartney and Best were arrested and deported for attempted arson. 
     </p>
     
-    <p>
+    <p class="div1">
         The Beatles first met Astrid Kirchherr in Hamburg, who was instrumental in their adoption of the mop topped Beatle haircut. During their period in Hamburg, Sutcliffe decided to leave the group to continue his studies. In April 1962, less than a year after leaving the group, he suffered a brain hemorrhage and died as a result.
-    </p>
+    </p> 
 
     <hr>
 
@@ -39,6 +39,17 @@
 <p class="anders">
 McCartney later said, "We lived backstage in the Bambi Kino, next to the toilets, and you could always smell them. The room had been an old storeroom, and there were just concrete walls and nothing else. No heat, no wallpaper, not a lick of paint; and two sets of bunk beds, with not very much covers—Union Jack flags—we were frozen." Lennon remembered: "We were put in this pigsty. We were living in a toilet, like right next to the ladies' toilet. We'd go to bed late and be woken up next day by the sound of the cinema show and old German fraus [women] pissing next door."After having been awoken in this fashion, the group were then obliged to use cold water from the urinals for washing and shaving.They were paid £2.50 each a day, seven days a week, playing from 8:30–9:30, 10 until 11, 11:30–12:30, and finishing the evening playing from one until two o'clock in the morning. German customers found the group's name comical, as "Beatles" sounded like Low German: Piedel, which is an infantile word for penis.
 </p>
+
+<div id="wikibeatles">
+    <a href="https://en.wikipedia.org/wiki/The_Beatles_in_Hamburg">Wiki Beatles</a>
+</div>
+
+<div class="box" id="box1">We</div>
+<div class="box" id="box2">all</div>
+<div class="box" id="box3">leave</div>
+<div class="box" id="box4">in</div>
+<div class="box" id="box5">yellow</div>
+<div class="box" id="box6">Submarine</div>
 
 </body>
 </html>
